remove(alias) , add(ts-init)

--- a/test/script/index.html
+++ b/test/script/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="../../dist/sw-js-min.js"></script>
+    <script src="../../dist/s2w-js-min.js"></script>
     <script>
         console.warn('sw',window.sw);
     </script>
