ts( automatically generate declaration files)

--- a/test/script/index.html
+++ b/test/script/index.html
@@ -9,7 +9,7 @@
 <body>
     <script src="../../dist/s2w-js-min.js"></script>
     <script>
-        console.warn('sw',window.sw);
+        console.warn('s2w',s2w);
     </script>
 </body>
 </html>
