--- a/test/script/index.html
+++ b/test/script/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <script src="./shim.js"></script>
     <script src="../../dist/s2w-js-min.js"></script>
     <script>
         console.warn('s2w',s2w);
