add ie8 and prev version support

--- a/test/script/index.html
+++ b/test/script/index.html
@@ -10,7 +10,7 @@
     <script src="./shim.js"></script>
     <script src="../../dist/s2w-js-min.js"></script>
     <script>
-        console.warn('s2w',s2w);
+        console.warn('s2w',s2w.isBoo(1), s2w.isArr({}));
     </script>
 </body>
 </html>
